# gomu

./: .gitignore  CMakeLists.txt  README.md
bak/include/: constants.h  controls.h  ship.h  ui.h
bak/src/: main.c  ship.c  ui.c
c/include/: actor.h  camera.h  hud.h  uju.h
c/src/: camera.c  hud.c  ship.c  uju.c  uju_utils.c
cpp/: CMakeLists.txt
cpp/include/: actor.hpp  dust.hpp  enemy.hpp  hud.h  hud.hpp  movement.h  ship.h  ship.hpp  uju.h  uju.hpp  uju_camera.h  uju_camera.hpp  uju_utils.h
cpp/src/: actor.cpp  dust.cpp  enemy.cpp  hud.cpp  ship.cpp  uju.cpp  uju_camera.cpp  uju_utils.cpp
include/: actor.h  camera.h  hud.h  ship.h  uju.h  uju_utils.h
src/: actor.c  camera.c  hud.c  main.c  ship.c  uju.c  uju_utils.c
